# smolbox

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.github/workflows/: rust.yml
benches/: lib.rs
src/: inner.rs  lib.rs
tests/: lib.rs
