[package]
name = "smolbox"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/Quant1um/smolbox"
categories = ["data-structures"]
description = "Like a Box, but small objects are stored on the stack"
authors = ["Quant1um"]
keywords = ["box", "smallbox", "alloc", "dst", "stack", "no_std"]
license = "MIT/Apache-2.0"

[dependencies]

[dev-dependencies]
assert_no_alloc = "1"
impls = "1"

[features]
default = ["alloc"]
alloc = []